Fix DESCRIPTION and ignore manifest

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,8 +26,8 @@ Imports:
   callr (>= 3.4.3),
   digest (>= 0.6.27),
   dplyr (>= 1.0.3),
-  fs (>= 1.5.0)
-  fst (>= 0.9.4)
+  fs (>= 1.5.0),
+  fst (>= 0.9.4),
   ggplot2 (>= 3.3.3),
   glue (>= 1.4.2),
   gt (>= 0.2.2),
